# std.module

./: CMakeLists.txt  allstd.cpp  allstd.hpp  clang.txt  libstdc++-expected-13.1-for-Clang16.0-deficiencies.diff  polyfill.hpp  std.ixx  test.cpp
allstd/: CMakeLists.txt
